tests/specs/ecosystem/aralroca/diff_dom_streaming/0_2_0.test
aralroca/diff-dom-streaming/0.2.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'Node'.
type Callback = (node: Node) => void;
                       ~~~~
    at file://<tmpdir>/index.d.ts:1:24

TS2304 [ERROR]: Cannot find name 'Node'.
export default function diff(oldNode: Node, reader: ReadableStreamDefaultReader, forEachStreamNode?: Callback): Promise<void>;
                                      ~~~~
    at file://<tmpdir>/index.d.ts:2:39

TS2304 [ERROR]: Cannot find name 'Node'.
type NextNodeCallback = (node: Node) => void;
                               ~~~~
    at file://<tmpdir>/src/index.ts:1:32

TS2304 [ERROR]: Cannot find name 'Node'.
export default function diff(oldNode: Node, reader: ReadableStreamDefaultReader, options?: Options): Promise<void> {
                                      ~~~~
    at file://<tmpdir>/src/index.ts:6:39

Found 4 errors.

